@@ -22,7 +22,7 @@
 	color: black;
 	border: 1px solid #aaa;
 	border-right: none;
-	line-height: 1.5em;
+	line-height: 1.5;
 	position: relative;
 	z-index: 2;
 }
@@ -95,7 +95,7 @@ img {
 }
 p {
 	margin: .4em 0 .5em 0;
-	line-height: 1.5em;
+	line-height: 1.5;
 }
 p img {
 	margin: 0;
@@ -135,14 +135,14 @@ div.editsection {
 }
 
 ul {
-	line-height: 1.5em;
+	line-height: 1.5;
 	list-style-type: square;
 	margin: .3em 0 0 1.5em;
 	padding: 0;
 	list-style-image: url(bullet.gif);
 }
 ol {
-	line-height: 1.5em;
+	line-height: 1.5;
 	margin: .3em 0 0 3.2em;
 	padding: 0;
 	list-style-image: none;
@@ -159,7 +159,7 @@ dl {
 	margin-bottom: .5em;
 }
 dd {
-	line-height: 1.5em;
+	line-height: 1.5;
 	margin-left: 2em;
 	margin-bottom: .1em;
 }
@@ -168,7 +168,7 @@ fieldset {
 	border: 1px solid #2f6fab;
 	margin: 1em 0 1em 0;
 	padding: 0 1em 1em;
-	line-height: 1.5em;
+	line-height: 1.5;
 }
 legend {
 	padding: .5em;
@@ -217,7 +217,7 @@ pre {
 	border: 1px dashed #2f6fab;
 	color: black;
 	background-color: #f9f9f9;
-	line-height: 1.1em;
+	line-height: 1.1;
 }
 
 /*
@@ -234,7 +234,7 @@ pre {
 
 #contentSub, #contentSub2 {
 	font-size: 84%;
-	line-height: 1.2em;
+	line-height: 1.2;
 	margin: 0 0 1.4em 1em;
 	color: #7d7d7d;
 	width: auto;
@@ -315,7 +315,7 @@ in the bottom-right corner of the content area */
 	font-weight: bold;
 	display: block;
 	margin: 1em 0;
-	line-height: 1.5em;
+	line-height: 1.5;
 }
 .documentByLine {
 	text-align: right;
@@ -437,7 +437,7 @@ div.thumb div a img {
 div.thumb div div.thumbcaption {
 	border: none;
 	text-align: left;
-	line-height: 1.4em;
+	line-height: 1.4;
 	padding: .3em 0 .1em 0;
 }
 div.magnify {
@@ -523,7 +523,7 @@ div.townBox dl dd {
 ** edit views etc
 */
 .special li {
-	line-height: 1.4em;
+	line-height: 1.4;
 	margin: 0;
 	padding: 0;
 }
@@ -678,7 +678,7 @@ special external link styling */
 	padding: 0;
 }
 .portlet ul {
-	line-height: 1.5em;
+	line-height: 1.5;
 	list-style-type: square;
 	list-style-image: url(bullet.gif);
 	font-size: 95%;
@@ -780,7 +780,7 @@ input.searchButton {
 	border: none;
 	background: none;
 	overflow: visible;
-	line-height: 1.2em;
+	line-height: 1.2;
 }
 
 #p-personal h5 {
@@ -798,7 +798,7 @@ input.searchButton {
 /* this is the ul contained in the portlet */
 #p-personal ul {
 	border: none;
-	line-height: 1.4em;
+	line-height: 1.4;
 	color: #2f6fab;
 	padding: 0 2em 0 3em;
 	margin: 0;
@@ -816,7 +816,7 @@ input.searchButton {
 	display: inline;
 	color: #2f6fab;
 	margin-left: 1em;
-	line-height: 1.2em;
+	line-height: 1.2;
 	background: none;
 }
 #p-personal li.active {
@@ -856,7 +856,7 @@ li#pt-login {
 	margin: 0;
 	white-space: nowrap;
 	width: 76%;
-	line-height: 1.1em;
+	line-height: 1.1;
 	overflow: visible;
 	background: none;
 	border-collapse: collapse;
