@@ -43,6 +43,7 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
   tables in Monobook
 * (bug 6868) Un-hardcode section edit link style
 * (bug 3205) Stop right floats from stacking horizontally in non-Monobook skins
+* (bug 2013) Inherit ratios and not computed values for line-height
 
 == Languages updated ==
 
